Subject: refactor: optimize search architecture, add pagination and caching
Body:

Refactor: Migrated database ranking logic from JPQL to Java to resolve ClassCastException and enable stable Page<Product> pagination.

Performance: Integrated Caffeine caching to cache search and category queries for 10 minutes, reducing database load.

Stability: Added Defensive Guard Clauses in CatalogService to handle null/blank queries effectively.

Configuration: * Increased database connection pool size to 30 in application.properties.

Configured Hibernate batching (batch_size=50) and optimistic locking via @Version for thread-safe inventory updates.

Configured multipart file upload limits (10MB) to support CSV data imports.